Update button text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="gift-icon">🎁</div>
             </div>
 
-            <button id="celebrateBtn">¡Celebrar! 🎉</button>
+            <button id="celebrateBtn">¡Yippee! 🎉</button>
         </div>
     </div>
 
